--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
 
 body {
     font-family: 'Gentium Basic';
-    min-height: 100vh;
 }
 
 section {
     display: flex;
     justify-content: space-between;
-    height: 100vh;
     width: 100%;
+    height: 100vh;
 }
 
 section nav {
@@ -46,11 +45,13 @@ section nav #new_note {
 .folders {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    width: 300px;
+    overflow: auto;
+    position: absolute;
+    top: 130px;
+    left: 0;
+    height: 100%;
 }
 
 .folders .foldername {
